--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,6 @@
-PORT=5000
+PORT=8080
 
 # MongoDB
 MONGO_URI=mongodb://localhost:27017/mydb
 
-# PostgreSQL
-POSTGRES_URI=postgresql://user:password@localhost:5432/mydb
+JWT_SECRET=
