--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "basic-backend-api",
-  "version": "1.1.0",
+  "name": "ai-study-api",
+  "version": "1.0.0",
   "description": "Node + Express backend API",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "build": "tsc",
+    "dev": "concurrently \"tsc --watch\" \"nodemon --watch dist dist/server.js\"",
+    "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "express": "^4.19.2",
     "express-rate-limit": "^7.3.0",
-    "mongoose": "^8.4.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.20.3",
+    "morgan": "^1.10.0",
     "pg": "^8.11.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^25.0.3",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
+    "typescript": "^5.9.3"
   }
 }
