--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,13 @@ PORT=8080
 MONGO_URI=mongodb://localhost:27017/mydb
 
 JWT_SECRET=
+
+# DEV auth (temporary)
+DEV_USER_ID=6949c2dfab065746aff402ae
+
+# LLM switch
+LLM_MODE=stub
+
+# Gemini 
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
