--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^25.0.3",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
