BE: gemini flashcards generation + safer parsing

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,8 +9,10 @@ JWT_SECRET=
 DEV_USER_ID=6949c2dfab065746aff402ae
 
 # LLM switch
-LLM_MODE=stub
+LLM_MODE=gemini
 
 # Gemini 
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-2.5-flash
+
+MOCK_USER_ID=test-user-dev-123
